--- a/reportmain/templates/reportForm.html
+++ b/reportmain/templates/reportForm.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>信息上报</title>
-
+    
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
     <link href="/static/bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
     <link href="/static/bootstrap/css/bootstrap-datetimepicker.min.css" rel="stylesheet" media="screen">
